Harden immersive world-event placement