@@ -1,245 +1,260 @@
 package hu.taliann.icesmp.runtime;
 
+import hu.taliann.icesmp.gui.ConfigMenuGUI;
+import hu.taliann.icesmp.gui.EventSpawnConfigMenuExtension;
 import hu.taliann.icesmp.managers.EventSpawnSafetyPolicy;
 import org.bukkit.configuration.file.YamlConfiguration;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
+import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
+/** Focused source + pure-policy regressions for immersive world-event placement. */
 public final class EventSpawnSafetyRegressionSuite {
     private EventSpawnSafetyRegressionSuite() { }
 
     public static void main(final String[] args) throws Exception {
-        verifiesPlayerDistancePolicy();
+        verifiesDynamicPlayerDistancePolicy();
+        verifiesVisibilityConePolicy();
         verifiesBoundedCandidateSearch();
         verifiesCircularWaterBuffer();
-        verifiesSafetyDefaultsAndRuntimeWiring();
-        verifiesEveryKnownEntityEventUsesGuardedPlacement();
+        verifiesPackagedSafetyProfiles();
+        verifiesRuntimeWiring();
+        verifiesConfigMenuExtension();
+        verifiesKnownEntityEventPaths();
         System.out.println("Event spawn safety regression suite passed.");
     }
 
-    private static void verifiesPlayerDistancePolicy() {
-        final UUID world = UUID.randomUUID();
-        final EventSpawnSafetyPolicy.PlayerPoint player = new EventSpawnSafetyPolicy.PlayerPoint(
-                UUID.randomUUID(), new EventSpawnSafetyPolicy.Point(world, 0, 64, 0),
-                false, false, false);
-        check(EventSpawnSafetyPolicy.tooCloseToRelevantPlayer(
-                new EventSpawnSafetyPolicy.Point(world, 191.999, 64, 0), List.of(player),
-                192, 0, true, true, false),
-                "inside 12-chunk horizontal minimum rejected");
-        check(!EventSpawnSafetyPolicy.tooCloseToRelevantPlayer(
-                new EventSpawnSafetyPolicy.Point(world, 192, 64, 0), List.of(player),
-                192, 0, true, true, false),
-                "exact minimum accepted");
+    private static void verifiesDynamicPlayerDistancePolicy() {
+        check(EventSpawnSafetyPolicy.effectiveHorizontalMinimum(192, 16, 32, true) == 288.0D,
+                "16-chunk send distance plus margin must raise the minimum to 288");
+        check(EventSpawnSafetyPolicy.effectiveHorizontalMinimum(320, 10, 32, true) == 320.0D,
+                "an explicit larger minimum must win over dynamic view distance");
+        check(EventSpawnSafetyPolicy.effectiveHorizontalMinimum(192, 32, 64, false) == 192.0D,
+                "event profiles must be able to disable dynamic view distance");
 
-        final EventSpawnSafetyPolicy.PlayerPoint second = new EventSpawnSafetyPolicy.PlayerPoint(
-                UUID.randomUUID(), new EventSpawnSafetyPolicy.Point(world, 400, 64, 0),
-                false, false, false);
+        final UUID world = UUID.randomUUID();
+        final EventSpawnSafetyPolicy.PlayerPoint ordinary = new EventSpawnSafetyPolicy.PlayerPoint(
+                UUID.randomUUID(), new EventSpawnSafetyPolicy.Point(world, 0, 64, 0),
+                false, false, false, 1.0D, 0.0D, 16);
+        final EventSpawnSafetyPolicy.Point inside =
+                new EventSpawnSafetyPolicy.Point(world, 287.999D, 64, 0);
+        final EventSpawnSafetyPolicy.Point boundary =
+                new EventSpawnSafetyPolicy.Point(world, 288.0D, 64, 0);
         check(EventSpawnSafetyPolicy.tooCloseToRelevantPlayer(
-                new EventSpawnSafetyPolicy.Point(world, 250, 64, 0), List.of(player, second),
-                192, 0, true, true, false),
-                "nearest of multiple players enforced");
+                inside, List.of(ordinary), 288, 0, true, true, false),
+                "inside dynamic minimum must be rejected");
+        check(!EventSpawnSafetyPolicy.tooCloseToRelevantPlayer(
+                boundary, List.of(ordinary), 288, 0, true, true, false),
+                "exact dynamic minimum remains valid");
 
         final EventSpawnSafetyPolicy.PlayerPoint admin = new EventSpawnSafetyPolicy.PlayerPoint(
-                UUID.randomUUID(), new EventSpawnSafetyPolicy.Point(world, 0, 64, 0),
-                false, false, true);
+                UUID.randomUUID(), ordinary.point(), false, false, true, 1.0D, 0.0D, 16);
         check(EventSpawnSafetyPolicy.tooCloseToRelevantPlayer(
                 new EventSpawnSafetyPolicy.Point(world, 20, 64, 0), List.of(admin),
                 192, 0, true, true, false),
-                "visible admin must block nearby event placement");
-        check(!EventSpawnSafetyPolicy.tooCloseToRelevantPlayer(
-                new EventSpawnSafetyPolicy.Point(world, 20, 64, 0), List.of(admin),
-                192, 0, true, true, true),
-                "explicit admin-ignore switch remains deterministic");
+                "a visible admin must block nearby placement by default");
+    }
 
-        final EventSpawnSafetyPolicy.PlayerPoint spectator = new EventSpawnSafetyPolicy.PlayerPoint(
+    private static void verifiesVisibilityConePolicy() {
+        final UUID world = UUID.randomUUID();
+        final EventSpawnSafetyPolicy.PlayerPoint eastFacing = new EventSpawnSafetyPolicy.PlayerPoint(
                 UUID.randomUUID(), new EventSpawnSafetyPolicy.Point(world, 0, 64, 0),
-                true, false, false);
-        check(!EventSpawnSafetyPolicy.tooCloseToRelevantPlayer(
-                new EventSpawnSafetyPolicy.Point(world, 1, 64, 0), List.of(spectator),
-                192, 0, true, true, false),
-                "spectator ignored by policy");
-        final EventSpawnSafetyPolicy.PlayerPoint vanished = new EventSpawnSafetyPolicy.PlayerPoint(
-                UUID.randomUUID(), new EventSpawnSafetyPolicy.Point(world, 0, 64, 0),
-                false, true, false);
-        check(!EventSpawnSafetyPolicy.tooCloseToRelevantPlayer(
-                new EventSpawnSafetyPolicy.Point(world, 1, 64, 0), List.of(vanished),
-                192, 0, true, true, false),
-                "vanished player ignored by policy");
+                false, false, false, 1.0D, 0.0D, 20);
+        check(EventSpawnSafetyPolicy.visibleInsidePlayerCone(
+                new EventSpawnSafetyPolicy.Point(world, 250, 64, 0), List.of(eastFacing),
+                384, 110, true, true, false),
+                "candidate directly in front of a player must be treated as visible");
+        check(!EventSpawnSafetyPolicy.visibleInsidePlayerCone(
+                new EventSpawnSafetyPolicy.Point(world, -250, 64, 0), List.of(eastFacing),
+                384, 110, true, true, false),
+                "candidate behind the player must survive the conservative view-cone check");
+        check(!EventSpawnSafetyPolicy.visibleInsidePlayerCone(
+                new EventSpawnSafetyPolicy.Point(world, 400, 64, 0), List.of(eastFacing),
+                384, 110, true, true, false),
+                "view-cone checks must remain bounded");
     }
 
     private static void verifiesBoundedCandidateSearch() {
         final List<EventSpawnSafetyPolicy.Offset> candidates =
-                EventSpawnSafetyPolicy.candidates(32, 256, 512, 42);
-        check(candidates.size() == 32, "expanded bounded attempt count");
+                EventSpawnSafetyPolicy.candidates(32, 288, 512, 42);
+        check(candidates.size() == 32, "candidate attempts must be bounded");
         for (final EventSpawnSafetyPolicy.Offset offset : candidates) {
             final double distance = Math.hypot(offset.x(), offset.z());
-            check(distance >= 256 - 1.0E-9 && distance <= 512 + 1.0E-9,
-                    "candidate remains outside visibility annulus");
+            check(distance >= 288 - 1.0E-9 && distance <= 512 + 1.0E-9,
+                    "candidate escaped its configured annulus");
         }
-        check(candidates.equals(EventSpawnSafetyPolicy.candidates(32, 256, 512, 42)),
-                "candidate order deterministic");
+        check(candidates.equals(EventSpawnSafetyPolicy.candidates(32, 288, 512, 42)),
+                "candidate order must remain deterministic");
     }
 
     private static void verifiesCircularWaterBuffer() {
-        final List<EventSpawnSafetyPolicy.GridOffset> zero =
-                EventSpawnSafetyPolicy.waterProbeOffsets(0);
-        check(zero.equals(List.of(new EventSpawnSafetyPolicy.GridOffset(0, 0))),
-                "zero-radius water scan must inspect the spawn column exactly once");
-
         final List<EventSpawnSafetyPolicy.GridOffset> radius =
-                EventSpawnSafetyPolicy.waterProbeOffsets(4);
-        check(radius.get(0).equals(new EventSpawnSafetyPolicy.GridOffset(0, 0)),
-                "water scan must start at the spawn column for fast fail");
-        check(radius.contains(new EventSpawnSafetyPolicy.GridOffset(4, 0))
-                        && radius.contains(new EventSpawnSafetyPolicy.GridOffset(-4, 0))
-                        && radius.contains(new EventSpawnSafetyPolicy.GridOffset(0, 4))
-                        && radius.contains(new EventSpawnSafetyPolicy.GridOffset(0, -4)),
-                "cardinal shoreline boundary must be covered");
-        check(!radius.contains(new EventSpawnSafetyPolicy.GridOffset(4, 4)),
-                "square corner outside the circular buffer must not be scanned");
-        check(radius == EventSpawnSafetyPolicy.waterProbeOffsets(4),
-                "water probe mask must be cached and immutable per bounded radius");
+                EventSpawnSafetyPolicy.waterProbeOffsets(8);
+        check(radius.getFirst().equals(new EventSpawnSafetyPolicy.GridOffset(0, 0)),
+                "water scan must fast-fail from the exact spawn column");
+        check(radius.contains(new EventSpawnSafetyPolicy.GridOffset(8, 0))
+                        && !radius.contains(new EventSpawnSafetyPolicy.GridOffset(8, 8)),
+                "water mask must be circular rather than square");
+        check(radius == EventSpawnSafetyPolicy.waterProbeOffsets(8),
+                "water masks must be cached and immutable");
         check(EventSpawnSafetyPolicy.waterProbeOffsets(100).stream()
                         .allMatch(offset -> offset.x() * offset.x()
                                 + offset.z() * offset.z() <= 32 * 32),
-                "water buffer radius must be bounded against accidental quadratic explosions");
+                "water mask radius must stay hard-bounded");
     }
 
-    private static void verifiesSafetyDefaultsAndRuntimeWiring() throws Exception {
+    private static void verifiesPackagedSafetyProfiles() {
         final YamlConfiguration config = YamlConfiguration.loadConfiguration(Path.of(
                 "src/main/resources/config/event-spawn-safety.yml").toFile());
         check(config.getDouble("world-events.safety.min-horizontal-distance-blocks") >= 192.0D,
-                "events must default beyond normal entity visibility");
-        check(!config.getBoolean("world-events.safety.ignore-admins", true),
-                "visible admins must count as players by default");
-        check(config.getInt("world-events.safety.search-attempts") >= 32,
-                "distant search needs enough bounded candidates");
-        check(config.getDouble("world-events.safety.search-min-radius-blocks") >= 256.0D,
-                "player-anchored search must begin beyond 16 chunks");
-        check(config.getDouble("world-events.safety.search-max-radius-blocks") >= 512.0D,
-                "search must have room to escape protected or wet terrain");
-        check(!config.getBoolean("world-events.safety.require-loaded-chunk", true),
-                "distant search must be allowed to prepare inactive generated chunks");
-        check(!config.isSet("world-events.safety.generate-unloaded-chunks"),
-                "world generation must not become a normal config surface");
+                "global player distance default regressed");
+        check(config.getBoolean("world-events.placement.dynamic-view-distance-enabled"),
+                "dynamic send/view-distance protection must default on");
+        check(config.getBoolean("world-events.placement.visibility-cone.enabled"),
+                "view-cone protection must default on");
+        check(config.getInt("world-events.placement.max-concurrent-searches") == 2,
+                "search concurrency default changed unexpectedly");
+        check(config.getInt("world-events.placement.max-chunks-per-search") >= 96,
+                "distant footprint search lacks a viable chunk budget");
+        check(config.getLong("world-events.placement.search-timeout-millis") >= 5000L,
+                "async search timeout is too short");
+        check(config.getInt("world-events.placement.arrival.delay-seconds") > 0,
+                "arrival state must have a visible pre-spawn window");
+        check(config.getBoolean("world-events.placement.arrival.player-hint"),
+                "arrival state must produce a player-facing directional hint");
 
-        check(config.getBoolean("world-events.water-safety.enabled"),
-                "world-event water safety must default to enabled");
-        check(config.getBoolean("world-events.water-safety.enforce-all-events"),
-                "legacy per-event water=false must not bypass the global rule");
-        check(config.getInt("world-events.water-safety.buffer-blocks") >= 1,
-                "shoreline buffer default must reject immediate water edges");
-        check(!config.isSet("world-events.spawn-rules.player-caravan.water")
-                        && !config.isSet("world-events.spawn-rules.caravan.water"),
-                "water-safety subsystem must not duplicate world.yml spawn-rule ownership");
+        check(config.getBoolean("world-events.water-safety.enabled")
+                        && config.getBoolean("world-events.water-safety.enforce-all-events")
+                        && config.getInt("world-events.water-safety.buffer-blocks") >= 1,
+                "global water and shoreline protection regressed");
 
-        final String guard = read("src/main/java/hu/taliann/icesmp/managers/EventSpawnGuard.java");
-        check(guard.contains("waterOrShoreUnsafe")
-                        && guard.contains("HeightMap.WORLD_SURFACE")
-                        && guard.contains("Waterlogged")
-                        && guard.contains("findSafeAtOrNear")
-                        && guard.contains("EventSpawnSafetyPolicy.waterProbeOffsets")
-                        && guard.contains("reserveAfterSurfaceValidation")
-                        && guard.contains("prepareCandidateChunks")
-                        && guard.contains("getChunkAtAsync(chunkX, chunkZ, false)")
-                        && guard.contains("CompletableFuture.allOf")
-                        && !guard.contains("generate-unloaded-chunks")
-                        && guard.contains("WATER_OR_SHORE")
-                        && guard.contains("min-horizontal-distance-blocks\", 192.0D")
-                        && guard.contains("ignore-admins\", false")
-                        && guard.contains("search-attempts\", 32")
-                        && guard.contains("search-min-radius-blocks\", 256.0D")
-                        && guard.contains("search-max-radius-blocks\", 512.0D"),
-                "central guard lost distant async search or shoreline fallbacks");
-
-        final String caravan = read("src/main/java/hu/taliann/icesmp/managers/CaravanManager.java");
-        check(caravan.contains("findSafeAtOrNear(\"caravan\"")
-                        && caravan.contains("arrivalPending = true")
-                        && caravan.contains("anchorGeneration")
-                        && caravan.contains("synchronized boolean forceArrive")
-                        && !caravan.contains("getHighestBlockYAt")
-                        && !caravan.contains("topOf("),
-                "merchant caravan may bypass the central location resolver or double-launch");
-
-        final String playerCaravan = read(
-                "src/main/java/hu/taliann/icesmp/managers/PlayerCaravanManager.java");
-        check(playerCaravan.contains("findSafeNear(\"player-caravan\"")
-                        && playerCaravan.contains("failPendingSpawn")
-                        && playerCaravan.contains("treasuryManager.deposit(faction, amount)")
-                        && playerCaravan.contains("PENDING_CONVOY_ID")
-                        && !playerCaravan.contains("getHighestBlockYAt")
-                        && !playerCaravan.contains("ThreadLocalRandom"),
-                "player caravan may bypass safe search or lose cargo on search failure");
-
-        final String configManager = read(
-                "src/main/java/hu/taliann/icesmp/managers/ConfigManager.java");
-        check(configManager.contains("\"event-spawn-safety\""),
-                "event-spawn safety subsystem is not loaded on existing deployments");
+        check(config.getDouble("world-events.profiles.stranger.search-min-radius-blocks") >= 64.0D
+                        && config.getDouble("world-events.profiles.stranger.search-max-radius-blocks") >= 96.0D,
+                "Stranger hidden-local search ring is missing");
+        check(!config.getBoolean("world-events.profiles.stranger.use-dynamic-view-distance", true),
+                "Stranger must use its intentional local hidden profile");
+        check(!config.getBoolean("world-events.profiles.player-caravan.arrival.enabled", true),
+                "paid player caravan must not be held in a cosmetic arrival delay");
+        for (final String internal : List.of("escort-route", "escort-wave")) {
+            check(config.getDouble("world-events.profiles." + internal
+                            + ".min-horizontal-distance-blocks", -1.0D) == 0.0D,
+                    internal + " must remain usable after players reach the event");
+            check(!config.getBoolean("world-events.profiles." + internal
+                            + ".use-dynamic-view-distance", true),
+                    internal + " must not inherit the global distance gate");
+        }
+        check(!config.isSet("world-events.placement.generate-unloaded-chunks"),
+                "event placement must never expose world generation as an option");
     }
 
-    private static void verifiesEveryKnownEntityEventUsesGuardedPlacement() throws Exception {
+    private static void verifiesRuntimeWiring() throws Exception {
+        final String guard = read("src/main/java/hu/taliann/icesmp/managers/EventSpawnGuard.java");
+        check(guard.contains("player.getSendViewDistance()")
+                        && guard.contains("visibleInsidePlayerCone")
+                        && guard.contains("pendingArrivals")
+                        && guard.contains("completeSearchPhase")
+                        && guard.contains("arrival-revalidation")
+                        && guard.contains("findSafeRoute")
+                        && guard.contains("footprintAllowed")
+                        && guard.contains("final BlockReason surface = surfaceReason(key, world")
+                        && guard.contains("recentLocations")
+                        && guard.contains("allowed-biomes")
+                        && guard.contains("getChunkAtAsync(chunkX, chunkZ, false)")
+                        && guard.contains("max-concurrent-searches")
+                        && guard.contains("search-timeout-millis")
+                        && guard.contains("timeoutTicks")
+                        && guard.contains("GlobalRegionScheduler().runDelayed")
+                        && guard.contains("max-chunks-per-search")
+                        && guard.contains("EventSpawnDebugListener")
+                        && guard.contains("EventSpawnConfigMenuExtension.install"),
+                "central guard lost one or more immersive placement guarantees");
+        check(!guard.contains("generate-unloaded-chunks"),
+                "runtime must not allow event searches to generate terrain");
+
+        final String snapshots = read(
+                "src/main/java/hu/taliann/icesmp/listeners/EventSpawnGuardListener.java");
+        check(snapshots.contains("getYaw()") && snapshots.contains("getPitch()")
+                        && snapshots.contains("changedPositionOrDirection"),
+                "look-direction snapshots must refresh when the player turns");
+
+        final String debug = read(
+                "src/main/java/hu/taliann/icesmp/listeners/EventSpawnDebugListener.java");
+        check(debug.contains("/events debug spawn <event-kulcs>")
+                        && debug.contains("guard.debugSearch"),
+                "admin spawn diagnostics are not wired");
+    }
+
+    private static void verifiesConfigMenuExtension() throws Exception {
+        EventSpawnConfigMenuExtension.install();
+        final Set<String> keys = ConfigMenuGUI.allEntries().stream()
+                .map(ConfigMenuGUI.Entry::key).collect(Collectors.toSet());
+        for (final String required : List.of(
+                "world-events.water-safety.enabled",
+                "world-events.water-safety.enforce-all-events",
+                "world-events.water-safety.buffer-blocks",
+                "world-events.placement.dynamic-view-distance-enabled",
+                "world-events.placement.visibility-cone.enabled",
+                "world-events.placement.max-concurrent-searches",
+                "world-events.placement.search-timeout-millis",
+                "world-events.placement.route-attempts",
+                "world-events.placement.arrival.player-hint")) {
+            check(keys.contains(required), "config GUI extension missing: " + required);
+        }
+        for (final ConfigMenuGUI.Category category : ConfigMenuGUI.CATEGORIES.values()) {
+            check(category.entries().size() <= 45,
+                    "config GUI category capacity exceeded: " + category.id());
+        }
+        final String extension = read(
+                "src/main/java/hu/taliann/icesmp/gui/EventSpawnConfigMenuExtension.java");
+        check(extension.contains("OVERFLOW_CATEGORY")
+                        && extension.contains("Event spawn-védelem"),
+                "GUI extension must remain compatible with concurrent menu expansion");
+    }
+
+    private static void verifiesKnownEntityEventPaths() throws Exception {
+        final String escort = read("src/main/java/hu/taliann/icesmp/managers/EscortManager.java");
+        check(escort.contains("findSafeAtOrNear(\"escort\"")
+                        && escort.contains("findSafeNear(\"escort\"")
+                        && escort.contains("findSafeRoute(\"escort\"")
+                        && escort.contains("resolveSafeStandingLocation(\n                    \"escort-wave\"")
+                        && escort.contains("isBlocked(\"escort-route\"")
+                        && escort.contains("force-use-player-anchor\", false")
+                        && !escort.contains("spawnConvoy(base)"),
+                "escort may bypass distant start, route or internal-wave profiles");
+
+        final String stranger = read(
+                "src/main/java/hu/taliann/icesmp/managers/StrangerNpcManager.java");
+        check(stranger.contains("findSafeNear(\"stranger\"")
+                        && stranger.contains("this::placeStranger")
+                        && !stranger.contains("nextDouble(Math.PI * 2.0D)"),
+                "Stranger still relies on a single direct random placement");
+
         final String ambient = read(
                 "src/main/java/hu/taliann/icesmp/managers/AmbientEventManager.java");
-        final String herd = section(ambient,
-                "private void animalMigration", "private void rewardParticipants");
-        check(herd.contains("findSafeNear(\"animal-migration\"")
-                        && herd.contains("resolveSafeStandingLocation(\"animal-migration\"")
-                        && herd.contains("isBlocked(\"animal-migration\"")
-                        && !herd.contains("getHighestBlockYAt"),
-                "ambient animal migration may still appear beside a player or on water");
+        check(ambient.contains("findSafeNear(\"animal-migration\"")
+                        && ambient.contains("resolveSafeStandingLocation(\"animal-migration\""),
+                "animal migration lost distant dry placement");
 
         final String cultists = read(
                 "src/main/java/hu/taliann/icesmp/managers/CultistEventManager.java");
-        final String cultistSpawner = section(cultists,
-                "private void spawnCultist", "private void prepareCultist");
         check(cultists.contains("findSafeNear(\"cultists\"")
-                        && cultists.contains("findSafeAtOrNear(\"cultists\"")
-                        && cultistSpawner.contains("resolveSafeStandingLocation")
-                        && cultistSpawner.contains("isBlocked(\"cultists\"")
-                        && !cultistSpawner.contains("getHighestBlockYAt"),
-                "cultist center or offset spawns may bypass distant dry placement");
+                        && cultists.contains("findSafeAtOrNear(\"cultists\""),
+                "cultist center placement lost the central search");
 
-        final String wildHunt = read(
-                "src/main/java/hu/taliann/icesmp/managers/WildHuntManager.java");
-        final String wildSpawn = section(wildHunt,
-                "private synchronized boolean spawn", "private void escape");
-        check(wildSpawn.contains("findSafeNear(\"wild-hunt\"")
-                        && wildSpawn.contains("isBlocked(\"wild-hunt\"")
-                        && !wildSpawn.contains("getHighestBlockYAt"),
-                "Wild Hunt may visibly pop in beside its anchor");
-
-        final String meteor = read(
-                "src/main/java/hu/taliann/icesmp/managers/MeteorEventManager.java");
-        final String meteorSpawn = section(meteor,
-                "private synchronized boolean spawn", "private void carve");
-        check(meteorSpawn.contains("findSafeNear(\"meteor\"")
-                        && meteorSpawn.contains("isBlocked(\"meteor\"")
-                        && !meteorSpawn.contains("meteor.spawn-radius"),
-                "meteor may still use the old visible landing square");
-
+        assertContains("WildHuntManager.java", "findSafeNear(\"wild-hunt\"");
+        assertContains("MeteorEventManager.java", "findSafeNear(\"meteor\"");
         assertContains("InvasionManager.java", "findSafeNear(\"invasion\"");
         assertContains("WorldBossManager.java", "findSafeNear(\"world-boss\"");
-        assertContains("CorruptionManager.java", "isUnsafeSurface(\"corruption\"");
-        assertContains("StrangerNpcManager.java", "isUnsafeSurface(\"stranger\"");
-        assertContains("EscortManager.java", "isUnsafeSurface(\"escort\"");
         assertContains("DarkUndeadAmbienceManager.java", "isBlocked(\"dark-undead\"");
     }
 
     private static void assertContains(final String file, final String marker) throws Exception {
         final String source = read("src/main/java/hu/taliann/icesmp/managers/" + file);
-        check(source.contains(marker),
-                "known event spawn path lost central guard: " + file);
-    }
-
-    private static String section(final String source, final String start, final String end) {
-        final int from = source.indexOf(start);
-        final int to = source.indexOf(end, Math.max(0, from + start.length()));
-        check(from >= 0 && to > from,
-                "source section missing: " + start + " -> " + end);
-        return source.substring(from, to);
+        check(source.contains(marker), "known event path lost central guard: " + file);
     }
 
     private static String read(final String path) throws Exception {
@@ -247,6 +262,8 @@ public final class EventSpawnSafetyRegressionSuite {
     }
 
     private static void check(final boolean condition, final String message) {
-        if (!condition) throw new AssertionError(message);
+        if (!condition) {
+            throw new AssertionError(message);
+        }
     }
 }
